typescript/checker/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty7.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty7.ts:3:6
  |
3 |     [Symbol.toStringTag](): void { }
  |      ^^^^^^

